# ppl.llm.serving

./: .gitignore  CMakeLists.txt  README.md  build.sh  json_reader.py  latency.json  profiling.sh  run.sh
docs/: llama_guide.md
src/models/llama/: llama_server.cc  llama_worker.cc
src/models/llama/conf/: llama_7b_config_example.json  llama_7b_config_example_runpod.json
tools/: CMakeLists.txt  client_latency.cc  client_qps_measure.cc  client_qps_measure_rqs.cc  offline_inference_demo.cc  samples.txt  tmp.cc
